fix bug on iPhone

--- a/src/style.css
+++ b/src/style.css
@@ -130,6 +130,7 @@ body {
   height: 100%;
   transition: transform 0.5s ease;
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
   border-radius: 14px;
 }
 
@@ -143,6 +144,7 @@ body {
   position: absolute;
   inset: 0;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   border-radius: 14px;
   display: flex;
   flex-direction: column;
@@ -173,8 +175,6 @@ body {
   border-radius: 50%;
   background: #fff;
   border: 4px solid #333;
-  position: relative;
-  z-index: 1;
   box-shadow: 0 0 0 3px #fff;
 }
 
